<resources>
    <string name="app_name">FYP Mall Management System and IPS</string>
    <string name="home_btn_customer">Customer</string>
    <string name="home_btn_shopkeeper">Shopkeeper</string>
    <string name="home_btn_admin"><u>Admin Login</u></string>
    <string name="customer_menu_locateMe">Locate Me</string>
    <string name="customer_menu_salesAlert">Sales Alert</string>
    <string name="customer_menu_categories">Categories</string>
    <string name="shopkeeperLogin">Shopkeeper Login</string>
    <string name="shopId">Shop Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="admin">Admin</string>
    <string name="adminLogin">Admin Login</string>
    <string name="customerMenu">Customer Menu</string>
    <string name="yourLocation">Your Location</string>
    <string name="showRoute">Show Route</string>
    <string name="shopkeeperMenu">Shopkeeper Menu</string>
    <string name="chngName">Change Name</string>
    <string name="mngSales">Manage Sales</string>
    <string name="ChangeName">Change Name</string>
    <string name="chngShopName">Change Shop Name</string>
    <string name="newName">New Name</string>
    <string name="submit">Submit</string>
    <string name="manageSale">Manage Sales</string>
    <string name="saleOffer">Sale Offer</string>
    <string name="addSale">Add Sale</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="offer">Offer</string>
    <string name="chngCategory">Change Category</string>
    <string name="category">Category</string>
    <string name="adminPanel">Admin Panel</string>
    <string name="addShop">Add Shop</string>
    <string name="rmvShop">Remove Shop</string>
    <string name="shopName">Shop Name</string>
    <string name="add">Add</string>
    <string name="srcName">Search by Name</string>
    <string name="srcShop">Search Shop</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="shwOnMap">Show On Map</string>
    <string name="categories">Categories</string>
    <string name="browCategory">Browse By Category</string>
    <string name="addAdmin"><u>Add Admin</u></string>
    <string name="addAdmin1">Add Admin</string>
    <string name="emailAddress">Email Address</string>
    <string name="signOut"><u>Sign Out</u></string>
    <string name="slctAddress">Select Shop Address</string>
    <string name="slctCategory"><u>Select Category</u></string>
    <string name="assignCategory">Assign Category</string>
    <string name="removeShp">Remove Shop</string>
    <string name="shopAddr">Shop Address</string>

</resources>