<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopkeeperMenu"
    android:background="@color/backgroundBlue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtShopkeeperName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="Welcome Back"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtShopkeeperName"
        android:backgroundTint="@color/btnYellow"
        android:text="@string/chngName"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnManageSales"
        android:layout_width="match_parent"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnYellow"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeName"
        android:text="@string/mngSales"
        android:layout_marginTop="15dp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangeCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/btnYellow"
        android:text="@string/chngCategory"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btnManageSales"
        tools:layout_editor_absoluteX="120dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShopkeeperSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeCategories"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/signOut"/>

</androidx.constraintlayout.widget.ConstraintLayout>