<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPanel"
    android:background="@color/backgroundBlue">

    <Button
        android:id="@+id/btnAddShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnYellow"
        android:text="@string/addShop"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="265dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"/>

    <Button
        android:id="@+id/btnRmvShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rmvShop"
        android:textStyle="bold"
        android:backgroundTint="@color/btnYellow"
        app:layout_constraintEnd_toEndOf="@+id/btnAddShop"
        app:layout_constraintStart_toStartOf="@+id/btnAddShop"
        app:layout_constraintTop_toBottomOf="@+id/btnAddShop"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdminSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/signOut"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRmvShop" />
</androidx.constraintlayout.widget.ConstraintLayout>