<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeName"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/txtShopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chngShopName"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/txtShopName"
        app:layout_constraintStart_toStartOf="@+id/txtShopName"
        app:layout_constraintTop_toBottomOf="@+id/txtShopName"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/txtInputName"
        app:layout_constraintStart_toStartOf="@+id/txtInputName"
        app:layout_constraintTop_toBottomOf="@+id/txtInputName"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/nameAnimation"
        android:layout_width="190dp"
        android:layout_height="190dp"
        app:layout_constraintEnd_toEndOf="@+id/btnSubmit"
        app:layout_constraintStart_toStartOf="@+id/btnSubmit"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
        android:layout_marginTop="40dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/changename" />

</androidx.constraintlayout.widget.ConstraintLayout>