<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAdd"
    android:background="@color/backgroundBlue">

    <TextView
        android:id="@+id/txtAddAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addAdmin1"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAdminEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="120dp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/btnYellow"
        app:hintTextColor="@color/btnYellow"
        app:layout_constraintEnd_toEndOf="@+id/txtAddAdmin"
        app:layout_constraintStart_toStartOf="@+id/txtAddAdmin"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAdmin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/emailAddress"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textInputAdminEmail"
        app:layout_constraintStart_toStartOf="@+id/textInputAdminEmail"
        app:layout_constraintTop_toBottomOf="@+id/textInputAdminEmail"
        android:layout_marginRight="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/btnYellow"
        app:hintTextColor="@color/btnYellow">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdminSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputPassword"
        android:layout_marginTop="35dp"
        android:text="@string/addAdmin1"
        android:backgroundTint="@color/btnYellow"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>